style(servers-page): prevent server cards overflow by replacing percentage gaps with px values

--- a/src/components/Pages/ServersPage/AllServers/GameType/GameType.module.scss
+++ b/src/components/Pages/ServersPage/AllServers/GameType/GameType.module.scss
@@ -3,7 +3,7 @@
 .serversGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1.35%;
+  gap: 16px;
   margin-bottom: 100px;
 }
 
